--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,15 @@
   "version": 2,
   "outputDirectory": "dist/public",
   "installCommand": "npm install --include=dev",
+  "buildCommand": "npm run build",
   "framework": null,
+  "functions": {
+    "api/index.ts": {
+      "includeFiles": "server/**",
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
