Fix booking time slot blocking and email notification system
- Implement proper time slot blocking to prevent overlapping bookings for same employee
- Update DateTimeSelection to check for contiguous free intervals based on service duration
- Use [start_at, end_at) semantics to allow back-to-back bookings
- Fix email notification system with improved error handling and logging
- Fix getSalonUsers to handle null users properly
- Add comprehensive logging for email delivery status
- Update .env.example with RESEND_FROM_EMAIL configuration

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ SESSION_SECRET=your-random-secret-key-here
 
 # Email Service (Resend)
 RESEND_API_KEY=your-resend-api-key
+# Optional: Set to a verified domain email (e.g., noreply@yourdomain.com)
+# If not set, defaults to noreply@resend.dev (may have delivery limitations)
+RESEND_FROM_EMAIL=noreply@yourdomain.com
 
 # Super Admin Email
 SUPER_ADMIN_EMAIL=admin@example.com
